--- a/Develop/package.json
+++ b/Develop/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "OOP and testing for week 10 homework",
   "main": "app.js",
+  "scripts": {
+    "test": "jest"
+  },
   "directories": {
     "lib": "lib",
     "test": "test"
-  },
-  "scripts": {
-    "test": "jest --verbose test/*"
   },
   "repository": {
     "type": "git",
